--- a/index.html
+++ b/index.html
@@ -159,15 +159,8 @@
         <p>&copy; 2026 Nicolas Lopez Web. Todos los derechos reservados.</p>
     </footer>
 
-    <!-- Script para el menú hamburguesa -->
-    <script>
-        const hamburgerBtn = document.getElementById('hamburger-btn');
-        const navMenu = document.getElementById('nav-menu');
+    <script src="/js/main.js"></script>
 
-        hamburgerBtn.addEventListener('click', () => {
-            navMenu.classList.toggle('active'); // Muestra/oculta el menú
-        });
-    </script>
 </body>
 
 </html>
