Se sigue verificando rutas de logo en pantalla grande.

--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
         const navMenu = document.getElementById('nav-menu');
 
         hamburgerBtn.addEventListener('click', () => {
-            navMenu.classList.toggle('active'); // Muestra/oculta el menú
+            navMenu.classList.toggle('active');
         });
     </script>
 </body>
