Modificacion de contenido en diferentes secciones de la web.

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                             <li>Responsive</li>
                             <li>Puesta online completa</li>
                         </ul>
-                        <a href="#contact" class="btn btn-primary">Contactame</a>
+                        <a href="#contact" class="btn btn-primary">Contactame para un presupuesto</a>
                     </div>
                 </div>
             </div>
@@ -64,7 +64,7 @@
                             <li>Correcciones</li>
                             <li>Soporte técnico</li>
                         </ul>
-                        <a href="#contact" class="btn btn-primary">Contactame</a>
+                        <a href="#contact" class="btn btn-primary">Contactame para un presupuesto</a>
                     </div>
                 </div>
             </div>
@@ -78,7 +78,7 @@
                             <li>Configuración básica</li>
                             <li>Migracion de datos</li>
                         </ul>
-                        <a href="#contact" class="btn btn-primary">Contactame</a>
+                        <a href="#contact" class="btn btn-primary">Contactame para un presupuesto</a>
                     </div>
                 </div>
             </div>
@@ -92,9 +92,9 @@
             <div class="card" style="width: 18rem;">
             <img src="assets/img/StageLogic.jpg" class="card-img-top" alt="">
             <div class="card-body">
-                <h5 class="card-title">StageLogic</h5>
-                <p class="card-text">Servicios IT</p>
-                <p>Desarrollo de sitios web y soporte tecnico especializado para el mundo de los eventos.</p>
+                <h5 class="card-title">Sitio corporativo</h5>
+                <p class="card-text">StageLogic</p>
+                <p>Desarrollo de una web que brindar servicio de diseño y desarrollo web, soporte tecnico, asesoramiento en tecnologia y aseguramiento de calidad a Djs. .</p>
                 <a href="https://nlopezdev.github.io/stagelogic/" target="_blank" class="btn btn-primary">Demo</a>
             </div>
         </div>
@@ -102,9 +102,9 @@
         <div class="card" style="width: 18rem;">
             <img src="assets/img/LopezCode.jpg" class="card-img-top" alt="...">
             <div class="card-body">
-                <h5 class="card-title">LopezCode</h5>
-                <p class="card-text">Portfolio IT</p>
-                <p>Colección visual de proyectos y logros de un Desarrollador Web e IT support specialist.</p>
+                <h5 class="card-title">Portfolio IT</h5>
+                <p class="card-text">LopezCode</p>
+                <p>Landing page con secciones claves, para mostrar el perfil profesional, informacion personal, redes, experiencia, educacion y contacto, de manera organizada.</p>
                 <a href="https://nlopezdev.github.io/LopezCode/" target="_blank" class="btn btn-primary" class="btn btn-primary">Demo</a>
             </div>
         </div>
@@ -112,9 +112,9 @@
         <div class="card" style="width: 18rem;">
             <img src="assets/img/GiTec.jpg" class="card-img-top" alt="...">
             <div class="card-body">
-                <h5 class="card-title">GiTec</h5>
-                <p class="card-text">Servicio Djs</p>
-                <p>Diseño sitio web servicio DJs para eventos sociales, con formulario de contacto.</p>
+                <h5 class="card-title">Landing para eventos</h5>
+                <p class="card-text">GiTec</p>
+                <p>Desarrollo web corporativa para Gitec, especializada en servicio de DJ, alquler de tecnica, y asesoramiento profesional para eventos privados.</p>
                 <a href="https://nlopezdev.github.io/GiTec/#inicio" target="_blank" class="btn btn-primary">Demo</a>
             </div>
         </div>
@@ -122,9 +122,9 @@
         <div class="card" style="width: 18rem;">
             <img src="assets/img/RTS.jpg"class="card-img-top" alt="...">
             <div class="card-body">
-                <h5 class="card-title">Rts Commissioning</h5>
-                <p class="card-text">Actualizacion de web</p>
-                <p>Modificacion de en WordPress + Elementor de datos de contacto, brochures, imagenes.</p>
+                <h5 class="card-title">Rediseño y actualización de web</h5>
+                <p class="card-text">Rts Commissioning</p>
+                <p>Rediseño y actualizacion de web con WordPress + Elementor de datos de contacto, brochures, imagenes y ajustar estilos.</p>
                 <a href="https://www.rts-comm.com/" target="_blank" class="btn btn-primary">Demo</a>
             </div>
         </div>
