Modificacion de datos en seccion sobre mi.

--- a/index.html
+++ b/index.html
@@ -133,11 +133,8 @@
 
     <section class="SobreMi" id="about">
         <h2>¿Por que trabajar conmigo?</h2>
-        <p> ✔ +4 años resolviendo problemas técnicos reales <br>
-            ✔ Perfil híbrido: web + IT <br>
-            ✔ Comunicación clara, sin tecnicismos <br>
-            ✔ Acompañamiento antes y después de la entrega <br>
-        </p>
+        <p>Soy Nicolás López, desarrollador web enfocado en crear sitios claros, rápidos y funcionales para negocios y profesionales. <br>
+        Trabajo cada proyecto de forma personalizada, priorizando la claridad del mensaje, la experiencia del usuario y la facilidad de mantenimiento. También ofrezco soporte técnico para acompañar al cliente más allá de la entrega del sitio.</p>
     </section>
 
     <section class="Contacto" id="contact">
